# twitter-clone

./: README.md  manage.py  pyproject.toml
core/: tests.py  views.py
core/migrations/: 0002_user_profile_image.py
core/static/core/js/: script.js
core/templates/core/: login.html  signup.html
twitter_clone/: pyproject.toml  settings.py  urls.py  views.py
twitter_clone/.github/workflows/: django.yml
twitter_clone/core/: models.py  serializers.py  tests.py  urls.py  views.py
twitter_clone/core/migrations/: 0001_initial.py  0003_remove_user_profile_image.py
twitter_clone/core/static/core/css/: feed.css  login.css  style.css
twitter_clone/core/static/core/js/: script.js
twitter_clone/core/templates/core/: feed.html  login.html  signup.html
twitter_clone/twitter_clone/: settings.py  urls.py
